// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Headings should render correctly (snapshot) 1`] = `
<div>
  <h1
    class="ant-typography mdx-heading heading h1"
  >
    Heading
  </h1>
</div>
`;

exports[`Headings should render correctly (snapshot) 2`] = `
<div>
  <h2
    class="ant-typography mdx-heading heading h2"
  >
    Heading
  </h2>
</div>
`;

exports[`Headings should render correctly (snapshot) 3`] = `
<div>
  <h3
    class="ant-typography mdx-heading heading h3"
  >
    Heading
  </h3>
</div>
`;

exports[`Headings should render correctly (snapshot) 4`] = `
<div>
  <h4
    class="ant-typography mdx-heading heading h4"
  >
    Heading
  </h4>
</div>
`;

exports[`Headings should render correctly (snapshot) 5`] = `
<div>
  <h5
    class="ant-typography mdx-heading heading h5"
  >
    Heading
  </h5>
</div>
`;

exports[`Headings should render correctly (snapshot) 6`] = `
<div>
  <h5
    class="ant-typography mdx-heading heading h6"
  >
    Heading
  </h5>
</div>
`;
